--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_SearchForm.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_SearchForm.cshtml
@@ -28,21 +28,21 @@
                             <div class="input-group-container">
                                 <div class="input-container">
                                     <span>From </span>
-                                    <input asp-for="MinDate" class="form-control" value="" aria-label="Transaction date range start" />
+                                    <input asp-for="MinDate" class="form-control mt-1" value="" aria-label="Transaction date range start" />
                                 </div>
                                 <div class="input-container">
                                     <span>To </span>
-                                    <input asp-for="MaxDate" class="form-control" value="" aria-label="Transaction date range end" />
+                                    <input asp-for="MaxDate" class="form-control mt-1" value="" aria-label="Transaction date range end" />
                                 </div>
                             </div>
                             <div class="input-group-container">
                                 <div class="input-container">
                                     <span>Amount From </span>
-                                    <input asp-for="MinAmount" class="form-control" value="" aria-label="Transaction date range start" />
+                                    <input asp-for="MinAmount" class="form-control mt-1" value="" aria-label="Transaction date range start" />
                                 </div>
                                 <div class="input-container">
                                     <span>Amount To </span>
-                                    <input asp-for="MaxAmount" class="form-control" value="" aria-label="Transaction date range end" />
+                                    <input asp-for="MaxAmount" class="form-control mt-1" value="" aria-label="Transaction date range end" />
                                 </div>
                             </div>
                             <div>
