--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                     </ul>          
-                    <form id="country-form" method="post" onsubmit="return false;">
+                    <form id="country-form" method="post" style="display: none">
                         <input type="text" id="country" aria-label="Country Selection" autocomplete="off"/>
                     </form>
                 </div>
