--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -33,6 +33,9 @@ $pagination-disabled-color: #BDC3C7;
 
 $modal-content-bg: $secondary;
 
+$spinner-width: calc(15px + var(--i) * 5px);
+$spinner-animation-speed: 1.25s;
+
 // Configuration
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/variables-dark";
@@ -74,7 +77,7 @@ $modal-content-bg: $secondary;
 //@import "../../node_modules/bootstrap/scss/placeholders";
 
 // Helpers
-//@import "../../node_modules/bootstrap/scss/helpers";
+@import "../../node_modules/bootstrap/scss/helpers";
 
 // Utilities
 @import "../../node_modules/bootstrap/scss/utilities/api";
@@ -177,6 +180,52 @@ body {
     margin: 0 0 0 auto;
     cursor: pointer;
     text-align: center;
+}
+
+//Spinners
+
+.spinner-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding: 10px 0;
+}
+
+.spinner-grow{
+    display: inline-block;
+    width: var(--#{$prefix}spinner-width);
+    height: var(--#{$prefix}spinner-height);
+    vertical-align: var(--#{$prefix}spinner-vertical-align);
+    border-radius: 50%;
+    animation: var(--#{$prefix}spinner-animation-speed) linear calc(var(--i) * 0.25s) infinite var(--#{$prefix}spinner-animation-name);
+}
+
+@keyframes spinner-grow {
+    0% {
+        transform: scale(0);
+    }
+
+    50% {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.spinner-grow {
+    --#{$prefix}spinner-width: #{$spinner-width};
+    --#{$prefix}spinner-height: #{$spinner-height};
+    --#{$prefix}spinner-vertical-align: #{$spinner-vertical-align};
+    --#{$prefix}spinner-animation-speed: #{$spinner-animation-speed};
+    --#{$prefix}spinner-animation-name: spinner-grow;
+    background-color: currentcolor;
+    opacity: 0;
+}
+
+@media (prefers-reduced-motion: reduce) {        
+    .spinner-grow {
+        --#{$prefix}spinner-animation-speed: #{$spinner-animation-speed * 2};
+    }
 }
 
 //Navbar
@@ -442,6 +491,7 @@ main {
 .accordion-head {
     display: flex;
     align-items: center;
+    padding: 5px;
 }
 
 .accordion-header {
@@ -577,6 +627,22 @@ main {
     background-color: $secondary;
 }
 
+.reeval-col {
+    padding: 3px 8px 8px 8px;
+    cursor: default;
+}
+
+.reevaluation-accordion {
+    scrollbar-width: none;
+    max-height: 254px;
+    overflow-y: hidden;
+    padding: 0;
+}
+
+.reevaluation-accordion::-webkit-scrollbar {
+    display: none;
+}
+
 .transaction-body {
     min-height: 35px;
     background-color: $secondary;
@@ -599,6 +665,7 @@ main {
     border-radius: 50%;
     width: 40px;
     height: 40px;
+    cursor: pointer;
 }
 
 .reevalIconContainer {
@@ -628,7 +695,7 @@ main {
     box-shadow: $box-shadow;
 }
 
-.lineChart-container {
+.barChart-container {
     width: 100%;
     padding: 2px;
     min-height: 250px;
@@ -670,6 +737,7 @@ main {
     width: fit-content;
     max-width: 100%;
     border-radius: $border-radius;
+    margin-top: 0.25rem;
 }
 
 .inputs-container {
@@ -785,6 +853,8 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+// Animations
 
 @keyframes rotate {
 
