--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_TransactionModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_TransactionModals.cshtml
@@ -18,7 +18,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="DateTime" class="control-label"></label>
-                            <input asp-for="DateTime" class="form-control" value="@DateTime.UtcNow.ToString("s")" />
+                            <input asp-for="DateTime" id="addTransaction_dateTime" class="form-control" value="@DateTime.UtcNow.ToString("s")" />
                             <span asp-validation-for="DateTime" class="text-danger"></span>
                         </div>
                         <div class="form-group">
